# saturn-bot-protocol

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  integration_test.go  release-please-config.json
.github/workflows/: pull_request.yaml  pull_request_title.yaml  release-integration-test-binary.yaml  release-please.yaml  tag.yaml
features/: apply.feature  events.feature  filter.feature  log.feature  shutdown.feature
go/: CHANGELOG.md
go/saturn_sync_protocol/plugin/: grpc_controller.pb.go  grpc_controller_grpc.pb.go
go/saturn_sync_protocol/v1/: grpc_controller.pb.go  grpc_controller_grpc.pb.go  saturnsync.pb.go  saturnsync_grpc.pb.go
protocol/v1/: saturnbot.proto  saturnsync.proto
python/: CHANGELOG.md  README.md  pyproject.toml
python/saturn_sync_protocol/plugin/: grpc_controller_pb2.py  grpc_controller_pb2_grpc.py
python/saturn_sync_protocol/v1/: grpc_controller_pb2.py  grpc_controller_pb2_grpc.py  saturnsync_pb2.py  saturnsync_pb2.pyi  saturnsync_pb2_grpc.py
saturn_sync_protocol/plugin/: grpc_controller.proto
saturn_sync_protocol/v1/: grpc_controller.proto  saturnsync.proto
